--- a/src/views/Auth/Login/index.css
+++ b/src/views/Auth/Login/index.css
@@ -2,6 +2,7 @@
     height: 100%;
     overflow: hidden;
     position: relative;
+    background-color: #eeeeee;
 }
 .login-container > .title {
     color: #eee;
