--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -68,4 +68,9 @@ div:focus {
 .app-container {
     padding: 20px;
 }
+.prevent-select {
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+}
  
