make it bigger project

--- a/src/views/pages/Auth/Login/index.css
+++ b/src/views/pages/Auth/Login/index.css
@@ -8,7 +8,7 @@
     color: #eee;
     font-size: 26px;
     font-weight: 400;
-    margin: 0px auto 30px auto;
+    margin: 0 auto 30px auto;
     text-align: center;
     letter-spacing: 1px;
 }
