--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,4 +1,5 @@
 @import 'transition.css';
+@import "custom.css";
 
 body {
     height: 100%;
@@ -68,9 +69,3 @@ div:focus {
 .app-container {
     padding: 20px;
 }
-.prevent-select {
-    -webkit-user-select: none; /* Safari */
-    -ms-user-select: none; /* IE 10 and IE 11 */
-    user-select: none; /* Standard syntax */
-}
- 
