--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,71 +1,15 @@
 @import 'transition.css';
-@import "custom.css";
 
-body {
-    height: 100%;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-    text-rendering: optimizeLegibility;
-    font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
+html, body {
+    font-family: Poppins, sans-serif;
 }
-html {
-    height: 100%;
-    box-sizing: border-box;
-}
-#root {
-    height: 100%;
-}
-.ant-layout {
-    height: 100%;
-}
-*, *:before, *:after {
-    box-sizing: inherit;
-}
-.no-padding {
-    padding: 0px !important;
-}
-.padding-content {
-    padding: 4px 0;
-}
-a:focus, a:active {
-    outline: none;
-}
-a, a:focus, a:hover {
-    cursor: pointer;
-    text-decoration: none;
-}
-div:focus {
-    outline: none;
-}
-.fr {
-    float: right;
-}
-.fl {
-    float: left;
-}
-.pr-5 {
-    padding-right: 5px;
-}
-.pl-5 {
-    padding-left: 5px;
-}
-.block {
-    display: block;
-}
-.pointer {
-    cursor: pointer;
-}
-.inlineBlock {
-    display: block;
-}
-.clearfix:after {
-    visibility: hidden;
-    display: block;
-    font-size: 0;
-    content: " ";
-    clear: both;
-    height: 0;
-}
+
 .app-container {
     padding: 20px;
+}
+
+.prevent-select {
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
 }
